# SmartGreenhouse

./: .travis.yml  CMakeLists.txt  CppTimer_8h.html  CppTimer_8h__dep__incl.map  CppTimer_8h__dep__incl.md5  CppTimer_8h__incl.map  CppTimer_8h__incl.md5  CppTimer_8h_source.html  Doxyfile  MCP342X_8cpp.html  MCP342X_8cpp__dep__incl.map  MCP342X_8cpp__dep__incl.md5  MCP342X_8cpp__incl.map  MCP342X_8cpp__incl.md5  MCP342X_8cpp_source.html  MCP342X_8h.html  MCP342X_8h__dep__incl.map  MCP342X_8h__dep__incl.md5  MCP342X_8h__incl.map  MCP342X_8h__incl.md5  MCP342X_8h_source.html  README.md  README_8md.html  README_8md_source.html  SGHD_8phtml.html  SGHD_8phtml_source.html  SGLD_8phtml.html  SGLD_8phtml_source.html  SensorPump_8cpp.html  SensorPump_8cpp__incl.map  SensorPump_8cpp__incl.md5  SensorPump_8cpp_source.html  SmartGreenhouse User Stories.docx  SmartGreenhouse User Stories.txt  Soiltest_8cpp.html  Soiltest_8cpp__incl.map  Soiltest_8cpp__incl.md5  Soiltest_8cpp_source.html  Status_8phtml.html  Status_8phtml_source.html  (+244 more)
docs/: FAQ.md  _config.yml  beforeyoustart.html  beforeyoustart.md  extra.css  index.md  install-hw.md  install-sw.md  install.md  mysmartgreenhouse.md  systemoverview.md
include/: VEML6075.cpp  VEML6075.h  VEML6075.h.gch  VEML6075v2.h  basicTest.cpp  serial_print_test.cpp
lib/: MCP3426.c  VEML6075.cpp  VEML6075.h  VEML6075v2.cpp  VEML6075v2.h
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  files_0.js  files_1.js  files_4.js  files_6.js  files_7.js  files_8.js  files_9.js  files_a.js  files_b.js  files_c.js  (+30 more)
test/: printValues.cpp  serial_print_test.c  serial_print_test.cpp
website/: SGHD.phtml  SGLD.phtml  Specs.html  Status.phtml  (+2 more)
(+76 files in other folders)
